--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@
     color: white;
     display: flex;
     align-items: center;
+    justify-content: space-evenly;
 }
 
 .nav-logo {
@@ -28,13 +29,13 @@
     
     border: 1px solid transparent;
     border-radius: 5px;
-    margin-left: 10px;
 }
 .border:hover{
     border: 1px solid white;
 }
 
 /*2nd box*/
+
 .add-icon{
     display: flex;
 }
@@ -48,3 +49,39 @@
     margin-left: 5px;
     font-weight: bold;
 }
+
+/*3rd box*/
+
+.nav-search{
+    display: flex;
+    background-color: #ff9933;
+    width: 600px;
+    height: 40px;
+    border-radius: 4px;
+    justify-content: space-evenly;
+}
+.search-select{
+    background-color: #f3f3f3;
+    width: 50px;
+    text-align: center;
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
+    border: none;
+}
+.search-input{
+    width: 100%;
+    font-size: 1rem;
+    border: none;
+}
+.search-icon{
+    width:45px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.2rem;
+    border-top-right-radius: 4px;
+    border-bottom-righT-radius: 4px;
+    color: black;
+}
+
+
