--- a/style.css
+++ b/style.css
@@ -59,6 +59,10 @@
     height: 40px;
     border-radius: 4px;
     justify-content: space-evenly;
+    
+}
+.nav-search:hover{
+    border: 2px solid #ff9933;
 }
 .search-select{
     background-color: #f3f3f3;
@@ -84,4 +88,26 @@
     color: black;
 }
 
+/*Box 4*/
 
+.text1{
+    font-size: 12px;
+    line-height: 14px;
+    height: 14px;
+    font-weight: 400;
+}
+.text2{
+    font-size: 14px;
+    line-height: 15px;
+    font-weight: 700;
+}
+
+/* Box 5*/
+
+.nav-cart i{
+    font-size: 30px;
+}
+.nav-cart{
+    font-size: 0.85rem;
+    font-weight: bold;
+}
