--- a/style.css
+++ b/style.css
@@ -160,3 +160,37 @@ a{
     color: #007185;
     text-decoration: none;
 }
+
+/*box section*/
+
+.shop-section{
+    display: flex;
+    background-color: #e2e7e6;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+}
+.box{
+    height: 400px;
+    width: 23%;
+    background-color: white;
+    margin-top: 15px;
+    padding: 20px 0px 15px;
+}
+.box-img{
+    height: 300px;
+    background-size: cover;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    margin: 25px 15px;
+    
+}
+.box-content{
+    margin:10px 10px;
+}
+.box-content h2{
+    margin-left: 15px;
+}
+.box-content p{
+    color: #007185;
+    margin-left: 15px;
+}
