--- a/style.css
+++ b/style.css
@@ -128,7 +128,7 @@
 .panel-opts{
     width: 70%;
 }
-a{
+.panel-opts a{
     margin: 10px;
 }
 
@@ -159,6 +159,7 @@ a{
 .hero-msg a{
     color: #007185;
     text-decoration: none;
+    margin: 10px;
 }
 
 /*box section*/
@@ -193,4 +194,68 @@ a{
 .box-content p{
     color: #007185;
     margin-left: 15px;
+}
+
+/*Footer*/
+
+.foot-panel1{
+    height: 50px;
+    background-color: #37475b;
+    margin: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    font-size: .85rem;
+    margin-top: 50px;
+}
+.foot-panel2{
+    background-color: #232f3e;
+    color: white;display: flex;
+    justify-content: space-evenly;
+    padding: 50px 50px;
+}
+.foot-panel2 ul a{
+    display: block;
+    font-size: .85rem;
+    margin-top: 10px;
+    color: #dddddd;
+}
+
+.foot-panel3{
+    border-top: 1px solid #3a4553;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    height: 50px;
+    background-color: #232f3e;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.logo-foot{
+    height: 50px;
+    width: 100px;
+    background-image: url('images/amazon_logo.png');
+    background-size: cover;
+}
+.foot-panel4{
+    background-color:#131A22;
+    color: #dddddd;
+    font-size: 0.85rem;
+    font-weight: 700;
+}
+.panel4-sub1{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+}
+.panel4-sub1 a{
+    margin: 10px;
+}
+.panel4-sub2{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 40px;
 }
